## Process this file with automake to produce Makefile.in

## ------------------------------------------------------------------------
## Makefile.am (startup)
## autotools build system for NAF applications
## ------------------------------------------------------------------------
## Copyright (C) 2005-2012 Carnegie Mellon University. All Rights Reserved.
## ------------------------------------------------------------------------
## Authors: Brian Trammell 
## ------------------------------------------------------------------------
## GNU General Public License (GPL) Rights pursuant to Version 2, June 1991
## Government Purpose License Rights (GPLR) pursuant to DFARS 252.227-7013
## ------------------------------------------------------------------------

EXTRA_DIST = yaf.conf.in init.d/yaf.in

