## Process this file with automake to produce Makefile.in
## ------------------------------------------------------------------------
## Makefile.am (include)
## autotools build system for YAF
## ------------------------------------------------------------------------
## Copyright (C) 2006-2012 Carnegie Mellon University. All Rights Reserved.
## ------------------------------------------------------------------------
## Authors: Brian Trammell
## ------------------------------------------------------------------------
## GNU General Public License (GPL) Rights pursuant to Version 2, June 1991
## Government Purpose License Rights (GPLR) pursuant to DFARS 252.227-7013
## ------------------------------------------------------------------------

nobase_include_HEADERS = yaf/yafcore.h  yaf/yafrag.h  yaf/yaftab.h \
                         yaf/decode.h   yaf/picq.h    yaf/autoinc.h \
	                     yaf/ring.h     yaf/qofdyn.h  yaf/bitmap.h \
                         yaf/streamstat.h yaf/qofifmap.h yaf/qofmaclist.h \
                         yaf/CERT_IE.h  yaf/TCH_IE.h  yaf/IANA_IE.h

