## Process this file with automake to produce Makefile.in
## ------------------------------------------------------------------------
## Makefile.am (include)
## autotools build system for QoF
## ------------------------------------------------------------------------
## Copyright (C) 2006-2012 Carnegie Mellon University. All Rights Reserved.
## Copyright (C) 2012-2013 Brian H. Trammell. All Rights Reserved.
## ------------------------------------------------------------------------
## Authors: Brian Trammell
## ------------------------------------------------------------------------
## GNU General Public License (GPL) Rights pursuant to Version 2, June 1991
## Government Purpose License Rights (GPLR) pursuant to DFARS 252.227-7013
## ------------------------------------------------------------------------

nobase_include_HEADERS = qof/yafcore.h  qof/yafrag.h  qof/yaftab.h \
                         qof/decode.h   qof/picq.h    qof/autoinc.h \
	                       qof/ring.h     qof/bitmap.h  qof/streamstat.h \
                         qof/qofifmap.h qof/qofmaclist.h \
                         qof/qofseq.h   qof/qofack.h  qof/qofrtt.h \
                         qof/qofrwin.h  qof/qofopt.h  \
                         qof/CERT_IE.h  qof/TCH_IE.h  qof/IANA_IE.h

